istioctl/cmd/testdata/authz/converter/multiple-access-rules-one-subject.golden.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-wildcard-rule0-target0
  namespace: default
spec:
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
    to:
    - operation:
        methods:
        - GET
  selector:
    matchLabels: {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-productpage-rule1-target0
  namespace: default
spec:
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
    to:
    - operation:
        methods:
        - POST
  selector:
    matchLabels:
      app: productpage
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-reviews-rule1-target0
  namespace: default
spec:
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
    to:
    - operation:
        methods:
        - POST
  selector:
    matchLabels:
      app: reviews
---
